adicionei um paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>olá, Mundo</h1>
     <hr>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id vero voluptatum eum optio nisi, facere fugit, ea, aspernatur iste fugiat explicabo ducimus impedit! Fugit nemo eum temporibus possimus quod repellendus.</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis debitis nobis nulla ad, deserunt consequuntur delectus ducimus aut molestiae error, voluptates odio sapiente iste quae tempore optio, esse earum corrupti?</p>
 </body>
 </html>
